# fastapi-pydantic-bug-poc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  models.py  openapi_test.py  pyproject.toml  routes.py  setup.cfg
.github/workflows/: test.yaml
pydantic_poc/: fastapi_stuff.py  main.py  models.py
