[tool.poetry]
name = "fastapi-pydantic-bug-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_pydantic_bug_poc"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
pydantic = "^2.4.2"
stringcase = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
