[tool.poetry]
name = "fastapi-pydantic-bug-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pydantic_poc"}]

[tool.poetry.scripts]
run-poc = "pydantic_poc.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
